jenkins_mock/examples/multi_rpm_imagesource/repos/app-multi-rpm-imagesource/kubeobjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-rpm-imagesource
  labels:
    app: multi-rpm-imagesource
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: multi-rpm-imagesource
    deploymentconfig: multi-rpm-imagesource
