jenkins_mock/examples/multi_rpm_imagesource/repos/app-multi-rpm-imagesource/kubeobjs/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: multi-rpm-imagesource
  labels:
    app: multi-rpm-imagesource
spec:
  to:
    kind: Service
    name: multi-rpm-imagesource
